<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="height_text">Height: </string>
    <string name="weight_text">Weight: </string>
    <string name="ft_text">ft</string>
    <string name="cm_text">cm</string>
    <string name="lbs_text">lb</string>
    <string name="kg_text">kg</string>
    <string name="bmi_text">BMI</string>
    <string name="result_text">Result</string>
    <string name="underweight_text">Underweight</string>
    <string name="normal_weight_text">Normal Weight</string>
    <string name="overweight_text">Overweight</string>
    <string name="obese_text">Obese</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="hint_text_height">Enter Your Height(cm)</string>
    <string name="hint_text_weight">Enter Your Weight(kg)</string>
    <string name="reset_button_text">Restart</string>
</resources>